edit 6 to 5 file student-progress-analyzer.html

--- a/student-progress-analyzer.html
+++ b/student-progress-analyzer.html
@@ -431,10 +431,9 @@
         const defaults = [
             { label: "Граматика и правопис", value1: "4", value2: "5", value3: "5" },
             { label: "Съставяне на текст", value1: "4", value2: "5", value3: "3" },
-            { label: "Литературни знания", value1: "4", value2: "3", value3: "5" },
-            { label: "Четене с разбиране", value1: "5", value2: "5", value3: "4" },
-            { label: "Творческо мислене и оригиналност", value1: "4", value2: "5", value3: "4" },
-            { label: "Езикова култура", value1: "3", value2: "5", value3: "5" }
+            { label: "Литературни знания", value1: "4", value2: "4", value3: "5" },
+            { label: "Четене с разбиране", value1: "5", value2: "4", value3: "4" },
+            { label: "Творчество и езикова култура", value1: "4", value2: "5", value3: "4" }
         ];
             
         const container = document.getElementById('inputFields');
